2010-01-21  Werner Koch  <wk@g10code.com>

	* compat/Makefile.am: New.
	* compat/compat.c: New.
	* compat/libcompat.h: New.
	* compat/getpid.c, compat/clock.c: New.

	* configure.ac: Require libgpg-error 1.8.
	(HAVE_W32CE_SYSTEM): New am_defines and am_conditionals.
	(getpid): Check for replacement function.
	(AC_CONFIG_LIBOBJ_DIR): New.
	(AC_TYPE_PID_T): New.
	(AM_INIT_AUTOMAKE): Use modern variant.
	(AC_CONFIG_FILES): Add compat/Makfile.
	* autogen.sh: Support W32CE.
	* ltmain.sh: Update to 2.2.6b
	(wrappers_required): Don't set for mingw32ce.
	* Makefile.am (DIST_SUBDIRS, SUBDIRS): Add compat.

2009-12-10  Werner Koch  <wk@g10code.com>

	* configure.ac: Add option --disable-O-flag-munging.

2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	Update to libtool 2.2.6a.
	* configure.ac: Invoke AC_CONFIG_MACRO_DIR.
	(AC_LIBTOOL_WIN32_DLL, AC_LIBTOOL_RC): Replace by ...
	(LT_PREREQ, LT_INIT, LT_LANG): ... these.
	* config.guess, config.sub, install-sh, ltmain.sh, m4/libtool.m4:
	Updated to libtool 2.2.6a.
	* m4/ltoptions.m4, m4/ltsugar.m4, m4/ltversion.m4,
	m4/lt~obsolete.m4: New files from libtool 2.2.6a.

2009-08-05  Werner Koch  <wk@g10code.com>

	* configure.ac: Test for sys/msg.h.

2009-04-23  Werner Koch  <wk@g10code.com>

	* README: Add a section on build problems.

2009-01-22  Werner Koch  <wk@g10code.com>

	* configure.ac: Bump LT version to C17/A7/R0 to mark the start of
	a new development series.

2009-01-22  Werner Koch  <wk@g10code.com>

	Release 1.4.4.

	* configure.ac: Bump LT version to C16/A5/R2.

2008-10-30  Werner Koch  <wk@g10code.com>

	* configure.ac: Remove option --enable-gcc-warnings.  Autodetect
	useful gcc warnings in maintainer mode.

2008-09-18  Werner Koch  <wk@g10code.com>

	Release 1.4.3.

	* configure.ac: Bump LT version to C16/A5/R1.

2008-09-15  Werner Koch  <wk@g10code.com>

	* configure.ac: Cehck for syslog.

2008-09-08  Werner Koch  <wk@g10code.com>

	Release 1.4.2.

2008-09-01  Werner Koch  <wk@g10code.com>

	Release 1.4.2rc2.
