@@ -7,6 +7,7 @@ Allan Clark		   allanc@sco.com
 Anand Kumria		   wildfire@progsoc.uts.edu.au
 Andreas Metzler            ametzler at downhill.at.eu.org
 Ariel T Glenn		   ariel@columbia.edu
+Aurelien Jarno             aurel32 at debian.org
 Ben Hutchings              ben decadent org uk
 Bodo Moeller		   Bodo_Moeller@public.uni-hamburg.de
 Brenno de Winter	   brenno@dewinter.com
